[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/scenes/Home.gd" type="Script" id=1]
[ext_resource path="res://fonts/dream_orphans/dream_orphans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/home/LobbyPanel.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 52
extra_spacing_char = 2
font_data = ExtResource( 2 )

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.05493
margin_right = 2.05493
script = ExtResource( 1 )

[node name="CreateGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = -40.0
text = "Create Game"

[node name="JoinGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 40.0
text = "Join Game"

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
margin_left = -120.0
margin_right = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Estimation"
align = 1

[node name="LobbyPanel" parent="." instance=ExtResource( 3 )]
visible = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]
